MVP front